--- a/en/city.html
+++ b/en/city.html
@@ -131,56 +131,136 @@
 
         <div class="container">
             <div class="section">
-                <h6>To organize your trip ( accommodation, food, and more) join the<a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US."> WhatsApp </a>group.</h6>
+                <h6>To organize your trip (accommodation, meals, etc.), contact the Bayes Plurinational team.<br> We will use the following <a url="https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US.">WhatsApp</a> group for communications during the event.</h6>
 
                 <h4 class="header col s12 light">
                     Location:
                 </h4>
-                
+
                 <div class="section" style="text-align: justify;">
-                    <p>The event will be carried out in the <a href="https://nodosde.gob.ar/"><span class="blue-grey-text">Universidad Nacional de Salta</span></a></p>
-                    <p>Address: Av. Bolivia 5150, Salta City, Argentina.</p>
+
+                    <p>The event will be held at the <a href="https://www.unsa.edu.ar/"><span class="blue-grey-text">Universidad Nacional de Salta</span></a>.</p>
+
+                    <p>Av. Bolivia 5150, Salta City, Argentina.</p>
 
                     <div class="row">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3808.0152892666542!2d-65.40714182562388!3d-24.727401734498752!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses-419!2sar!4v1708628154806!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
+
                 </div>
 
 
+                <h4 class="header col s12 light">
+                    Accommodations:
+                </h4>
+                <p>In all cases, you must confirm your place by contacting the Bayes Plurinational team.</p>
+                <h5 class="header col s12 light">
+                    1. House for speakers.
+                </h5>
+
+                <p><b>Casa Montaña</b>. Address: Santiago del Estero 282, Salta. (<a href="https://maps.app.goo.gl/LdjVtvKm8RSnXiex6" target="_blank">link to Google Maps</a>)
+                </p>
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/casa1.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/casa2.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.19; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/casa3.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/casa4.jpg" alt="Casa1">
+                    </div>
+                </div>
+
+                <h5 class="header col s12 light">
+                    2. Hotel for speakers.
+                </h5>
+                <p><b>Gran Hotel Presidente</b>. Address:  Av. Belgrano 353, Salta. (<a href="https://maps.app.goo.gl/pyFGs4DeZ1rU6mLT7" target="_blank">link to Google Maps</a>)
+                </p>
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/hotel-0.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/hotel-1.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/hotel-2.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/hotel-3.jpg" alt="Casa1">
+                    </div>
+                </div>
+
+                <h5 class="header col s12 light">
+                    3. Hostel for students.
+                </h5>
+                <p><b>Universidad Nacional de Salta</b>. Address: Av. Bolivia 5150, Salta. (<a href="https://deportes.unsa.edu.ar/index.php/albergue-universitario/" target="_blank">link to the UNSa web</a>)<br>
+                It has two rooms with 18 beds each (36 beds in total). You need to bring your own bedding (sheets).
+                </p>
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/albergue-0.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/albergue-1.jpg" alt="Casa1">
+                    </div>
+                </div>
+                <h5 class="header col s12 light">
+                    4. Camping facilities.
+                </h5>
+                <p><b>Universidad Nacional de Salta</b>. Address: Av. Bolivia 5150, Salta. (<a href="https://deportes.unsa.edu.ar/" target="_blank">link to the UNSa web</a>)<br>
+                The tents are set up under a roof and have good sanitary facilities.
+                </p>
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.25; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/deportes-0.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.25; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/deportes-1.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.25; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/deportes-2.jpg" alt="Casa1">
+                    </div>
+                </div>
                 <!--<h4 class="header col s12 light">
-                    Transport:
+                    Transporte:
                 </h4>
 
                 <div class="section" style="text-align: justify;">
-                    <p>One of the alternatives is the <a href="https://es.m.wikipedia.org/wiki/Tren_al_Desarrollo" target="_blank"> Tren Al Desarrollo SDE, Santiago del Estero.</a>
+                    <p>Una de las alternativas es <a href="https://es.m.wikipedia.org/wiki/Tren_al_Desarrollo" target="_blank"> el tren Al Desarrollo SDE, Santiago del Estero.</a>
                     </p>
 
                     <p>
-                    The urban train of Santiago del Estero, or Tren al Desarrollo, runs along the Mitre Line tracks between the city of Santiago del Estero and La Banda, in Argentina. It starts from the Centro Station near the Fórum to the Nodo Station.
+                    El tren urbano de Santiago del Estero o más conocido como Tren al Desarrollo, es un tren que recorre las vías de la Línea Mitre entre la ciudad de Santiago del Estero y La Banda, en Argentina. Nace desde la Estación Centro en cercanías al Fórum, hasta la Estación Nodo.
                     </p>
 
                     <p>
-                    Cost: Free.
+                    Costo: Gratuito.
                     </p>
 
                     <p>
-                    Frequency: currently the frequency is every 60 minutes.
+                    Frecuencia: actualmente la frecuencia es cada 60 minutos.
                     </p>
 
                     <p>
-                    More information <a href="https://www.facebook.com/TADSDE?locale2=es_LA" target="_blank"> here.</a>
+                    Más información <a href="https://www.facebook.com/TADSDE?locale2=es_LA" target="_blank"> aquí.</a>
                     </p>
+
+                    <h4 class="header col s12 light">
+                    Hospedaje:
+                    </h4>
+
+                    Más información <a href="https://www.google.com/maps/search/Hotels/@-27.755704,-64.2817257,14z" target="_blank"> Google Maps</a>-->
+
+
 
             </div>
-
-
-            <h4 class="header col s12 light">
-            Accommodation:
-            </h4>
-
-            You can find some hotels at<a href="https://www.google.com/maps/search/Hotels/@-27.755704,-64.2817257,14z" target="_blank"> Google Maps</a>-->
-
         </div>
+
 
         <p class="bottom-blank"><!--Vertical spacer--></p>
 
