--- a/es/ciudad.html
+++ b/es/ciudad.html
@@ -168,7 +168,7 @@
 
         <div class="container">
             <div class="section">
-                <h6>Para organizar tu viaje (hospedaje, alimentación y demás) ingresá al grupo de <a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US.">WhatsApp</a></h6>
+                <h6>Para organizar tu viaje (hospedaje, alimentación y demás) comunicate con el equipo Bayes Plurinacional.<br> Vamos a usar el siguiente grupo de <a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US.">WhatsApp</a> para comunicaciones durante el evento.</h6>
 
                 <h4 class="header col s12 light">
                     Ubicación:
@@ -187,6 +187,82 @@
                 </div>
 
 
+                <h4 class="header col s12 light">
+                    Hospedajes:
+                </h4>
+                <p>En todos los casos debe confirmar su lugar comunicándose con el equipo Bayes Plurinacional</p>
+                <h5 class="header col s12 light">
+                    1. Casa para disertantes.
+                </h5>
+
+                <p><b>Casa Montaña</b>. Dirección: Santiago del Estero 282, Salta. (<a href="https://maps.app.goo.gl/LdjVtvKm8RSnXiex6" target="_blank">link a Google Maps</a>)
+                </p>
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/casa1.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/casa2.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.19; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/casa3.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/casa4.jpg" alt="Casa1">
+                    </div>
+                </div>
+
+                <h5 class="header col s12 light">
+                    2. Hotel para disertantes.
+                </h5>
+                <p><b>Gran Hotel Presidente</b>. Dirección:  Av. Belgrano 353, Salta. (<a href="https://maps.app.goo.gl/pyFGs4DeZ1rU6mLT7" target="_blank">link a Google Maps</a>)
+                </p>
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/hotel-0.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/hotel-1.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/hotel-2.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/hotel-3.jpg" alt="Casa1">
+                    </div>
+                </div>
+
+                <h5 class="header col s12 light">
+                    3. Albergue para estudiantes.
+                </h5>
+                <p><b>Universidad Nacional de Salta</b>. Dirección: Av. Bolivia 5150, Salta. (<a href="https://deportes.unsa.edu.ar/index.php/albergue-universitario/" target="_blank">link a la página de la UNSa</a>)<br>
+                Cuenta con dos habitaciones con 18 camas cada una (36 camas total). Se requiere llevar juego de cama (sábanas).
+                </p>
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/albergue-0.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.33; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/albergue-1.jpg" alt="Casa1">
+                    </div>
+                </div>
+                <h5 class="header col s12 light">
+                    4. Instalaciones para acampar.
+                </h5>
+                <p><b>Universidad Nacional de Salta</b>. Dirección: Av. Bolivia 5150, Salta. (<a href="https://deportes.unsa.edu.ar/" target="_blank">link a la página de la UNSa</a>)<br>
+                Las carpas se instalan bajo techo y cuenta con buenas instalaciones sanitarias.
+                </p>
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.25; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/deportes-0.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.25; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/deportes-1.jpg" alt="Casa1">
+                    </div>
+                    <div class="figure" style="flex: 0.25; margin-right: 1%;margin-left: 1%">
+                    <img class="responsive-img" src="../img/2024/deportes-2.jpg" alt="Casa1">
+                    </div>
+                </div>
                 <!--<h4 class="header col s12 light">
                     Transporte:
                 </h4>
