--- a/navega_en.html
+++ b/navega_en.html
@@ -90,7 +90,7 @@
         <li><a href="../en/index.html">Plurinational Bayes</a></li>
         <li><a href="">WE ARE:</a></li>
         <li><a href="../en/plural.html">&#x2022; Plural</a></li>
-        <li><a href="../en/organize.html">&#x2022; Organizers</a></li>-->
+        <li><a href="../en/organize.html">&#x2022; Organizers</a></li>
         <li><a href="../en/community.html">&#x2022; Community</a></li>
         <li><a href="../en/music.html">&#x2022; Music</a></li>
         <li><a href="">Congress:</a></li>
