Re-Abren posters

--- a/en/index.html
+++ b/en/index.html
@@ -147,7 +147,7 @@
                 To organize your trip ( accommodation, food, and more) join the<a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US."> WhatsApp </a>group.
                 </h5>
                 <h6>
-                Here you can access <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"> the registration form</a> (only for students and attendees)
+                Open <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"><b>registration</b></a> to attend and present a poster.
                 <!--and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">last flayer</a>.-->
                 </h6>
 
