--- a/es/index.html
+++ b/es/index.html
@@ -189,7 +189,7 @@
                 Para organizar tu viaje (hospedaje, alimentación y demás) ingresá al grupo de <a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US.">WhatsApp</a>
                 </h5>
                 <h6>
-                Acceda al <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank">formulario de inscripción</a>.
+                Abierta la <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"><b>inscripción</b></a> para asistir y presentar póster.
                 <!--y
                 al <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">último volante</a>.-->
                 </h6>
