--- a/en/seminar.html
+++ b/en/seminar.html
@@ -141,6 +141,66 @@
 
             <br>
 
+            <h5>Virtual Seminar Series</h5>
+
+            <p>
+            On July 24 and 25, from 2 PM to 6 PM Argentina time (GMT-3), we will have two virtual workshops and two talks.
+
+            <ul>
+              <li>&#x2022; <b>Video Conference Room</b>: <a href="https://bayesplurinacional.org/link/VideoConferencia.html" target="_blank">bayesplurinacional.org/link/VideoConferencia.html</a></li>
+              <li>&#x2022; <b>Live Stream</b>: <a href="https://www.youtube.com/@bayesplurinacional" target="_blank">youtube.com/@bayesplurinacional</a></li>
+              <li>&#x2022; <b>Community Registration</b>: <a href="https://bayesplurinacional.org/link/InscripcionComunidad.html" target="_blank">bayesplurinacional.org/link/InscripcionComunidad.html</a></li>
+            </ul>
+
+            <div class="figcontainer" style="align-items: center;">
+              <div class="figure" style="flex: 0.6">
+                <img class="responsive-img" src="../img/2024/CicloVirtual/general.png">
+              </div>
+            </div>
+
+            </p>
+            <h6><b>Schedule</b>. Time ART (GMT-3).</h6>
+            <p>
+            <ul>
+            <b>Wednesday, July 24</b>
+
+            <li>&#x2022; 2 PM-5 PM Workshop (in Spanish). <em>Model Evaluation, Time Series, and Decision Making</em>. Gustavo Landfried. Argentina.</li>
+            <li>&#x2022; 5 PM-6 PM Talk (in Spanish). "Bayesian Sampling Methods for Understanding the Seismic Cycle and Earthquake Sources". Francisco Ortega Culaciati. Chile.</li>
+
+            <div class="figcontainer" style="align-items: center;">
+              <div class="figure" style="flex: 0.5">
+                <img class="responsive-img" src="../img/2024/CicloVirtual/gustavo.png">
+              </div>
+              <div class="figure" style="flex: 0.5">
+                <img class="responsive-img" src="../img/2024/CicloVirtual/francisco.png">
+              </div>
+            </div>
+
+            </ul>
+
+            <ul>
+            <b>Thursday, July 25</b>
+
+            <li>&#x2022; 2 PM-3 PM Talk (in Spanish). "Application of Bayesian Statistics in Paleontology". Jesús Alberto Diaz-Cruz. Mexico.</li>
+            <li>&#x2022; 3 PM-6 PM Workshop (in English). "Generative Modeling". Michael Betancourt. United States.</li>
+            </ul>
+
+            <div class="figcontainer" style="align-items: center;">
+              <div class="figure" style="flex: 0.5">
+                <img class="responsive-img" src="../img/2024/CicloVirtual/jesus.png">
+              </div>
+              <div class="figure" style="flex: 0.5">
+                <img class="responsive-img" src="../img/2024/CicloVirtual/Michael.png">
+              </div>
+            </div>
+            </p>
+
+            <br>
+            <br>
+
+            <h5>Seminars 2023</h5>
+
+
               <h6><b>Seminar 4.</b></h6>
 
               <p>
