--- a/es/seminario.html
+++ b/es/seminario.html
@@ -175,7 +175,69 @@
                 Nos enfocamos en los aspectos bayesianos de las aplicaciones prácticas, teóricas y filosóficas en todas las ramas de la ciencia y en todas las actividades productivas y sociales. Si quieres participar, envía tu propuesta a través del formulario <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html</a>.
                 </p>
 
+              <h5>Ciclo de Seminarios Virtuales</h5>
 
+
+              <p>
+              El 24 y 25 de julio tendremos de 14h a 18h hora Argentina (GMT-3): dos talleres virtuales y dos charlas.
+
+              <ul>
+                <li>&#x2022; <b>Sala de video conferencia</b>: <a href="https://bayesplurinacional.org/link/VideoConferencia.html" target="_blank">bayesplurinacional.org/link/VideoConferencia.html</a>
+               </li>
+               <li>&#x2022; <b>Transmisión en vivo</b>: <a href="https://www.youtube.com/@bayesplurinacional" target="_blank">youtube.com/@bayesplurinacional</a>
+               </li>
+               <li>&#x2022; <b>Inscripción a la comunidad</b>: <a href="https://bayesplurinacional.org/link/InscripcionComunidad.html" target="_blank">bayesplurinacional.org/link/InscripcionComunidad.html</a>
+               </li>
+               </ul>
+
+              <div class="figcontainer" style="align-items: center;">
+                  <div class="figure" style="flex: 0.6">
+                  <img class="responsive-img" src="../img/2024/CicloVirtual/general.png"></a>
+                  </div>
+              </div>
+
+              </p>
+              <h6><b>Cronograma</b>. Hora ART (GMT-3).</h6>
+              <p>
+              <ul>
+              <b>Miércoles 24 de julio</b>
+
+              <li>&#x2022; 14h-17h Taller (en español). <em>Evaluación de modelos, series temporales y toma de decisiones</em>. Gustavo Landfried. Argentina.</li>
+              <li>&#x2022; 17h-18h Charla (en español). "Métodos de muestreo bayesiano para el entendimiento del ciclo sísmico y la fuente de terremotos". Francisco Ortega Culaciati. Chile.</li>
+
+
+              <div class="figcontainer" style="align-items: center;">
+                  <div class="figure" style="flex: 0.5">
+                  <img class="responsive-img" src="../img/2024/CicloVirtual/gustavo.png"></a>
+                  </div>
+                  <div class="figure" style="flex: 0.5">
+                  <img class="responsive-img" src="../img/2024/CicloVirtual/francisco.png"></a>
+                  </div>
+              </div>
+
+               </ul>
+
+              <ul>
+              <b>Jueves 25 de julio</b>
+
+              <li>&#x2022; 14h-15h Charla  (en español). "Aplicación de la estadística bayesiana en Paleontología". Jesús Alberto Diaz-Cruz. México.</li>
+              <li>&#x2022; 15h-18h Taller (en inglés). "Generative modeling". Michael Betancourt. Estados Unidos.</li>
+               </ul>
+
+               <div class="figcontainer" style="align-items: center;">
+                  <div class="figure" style="flex: 0.5">
+                  <img class="responsive-img" src="../img/2024/CicloVirtual/jesus.png"></a>
+                  </div>
+                  <div class="figure" style="flex: 0.5">
+                  <img class="responsive-img" src="../img/2024/CicloVirtual/Michael.png"></a>
+                  </div>
+              </div>
+              </p>
+
+              <br>
+              <br>
+
+              <h5>Seminarios 2023</h5>
 
               <h6><b>Seminario 4.</b></h6>
 
