Hecho todos los cambio. Formularios estables en 3 idiomas para Unirse a la comunidad y proponer actividades virtuales

--- a/en/index.html
+++ b/en/index.html
@@ -142,10 +142,10 @@
 
             <div class="row center">
                 <h4 class="header col s12 light">Plurinational Bayes School-Congress 2024!</h4>
-                <h5 class="header col s12 light"><b>August 6 to 8. Salta, Argentina. Free of charge.</b>
+                <h6 class="header col s12 light"><b>August 6 to 8. Salta, Argentina. Free of charge.</b>
                 <br>
                 To organize your trip ( accommodation, food, and more) join the<a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US."> WhatsApp </a>group.
-                </h5>
+                </h6>
                 <h6>
                 Open <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"><b>registration</b></a> to attend and present a poster.
                 <!--and the <a href="https://raw.githubusercontent.com/BayesPlurinacional/BayesPlurinacional.github.io/main/archivos/2024/BayesPluralSalta2024-1.png" download target="_blank">last flayer</a>.-->
@@ -156,11 +156,18 @@
                </div>
 
                <div class="row center">
-                <h4 class="header col s12 light">Permanent Virtual Seminar.</h4>
-                <h5 class="header col s12 light">Permanent registrations.
-                </h5>
+                <h5 class="header col s12 light">Join the community</h5>
                 <h6>
-                Access the <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html" target="_blank">virtual event registration form</a>
+                To join the community, please access the following <a href="https://bayesplurinacional.org/link/JoinTheCommunity.html" target="_blank"> form</a>
+                </h5>
+                </h6>
+
+
+
+               <div class="row center">
+                <h5 class="header col s12 light">Permanent Virtual Activities</h5>
+                <h6>
+                To submit a proposal for a virtual activity, please access the following <a href="https://bayesplurinacional.org/link/VirtualProposal.html" target="_blank"> form</a>
                 </h5>
                 </h6>
 
