--- a/es/index.html
+++ b/es/index.html
@@ -183,11 +183,11 @@
 
             <div class="row center">
                 <h4 class="header col s12 light">Escuela-Congreso Bayes Plurinacional 2024!</h4>
-                <h5 class="header col s12 light">
-                <b>Del 6 al 8 de agosto. Salta, Argentina. Sin costo y con becas.</b>
+                <h6 class="header col s12 light">
+                <b>Del 6 al 9 de agosto. Salta, Argentina. Sin costo y con becas.</b>
                 <br>
                 Para organizar tu viaje (hospedaje, alimentación y demás) ingresá al grupo de <a url=": https://chat.whatsapp.com/CWFZiP8On7RDRDGNL8y5US.">WhatsApp</a>
-                </h5>
+                </h6>
                 <h6>
                 Abierta la <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html" target="_blank"><b>inscripción</b></a> para asistir y presentar póster.
                 <!--y
@@ -201,11 +201,21 @@
             </div>
 
             <div class="row center">
-                <h4 class="header col s12 light">Seminario Virtual Permanente.</h4>
-                <h5 class="header col s12 light">Inscripciones Permanentes.
-                </h5>
+                <h5 class="header col s12 light">Unirse a la comunidad</h5>
                 <h6>
-                Acceda al <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html" target="_blank">formulario de inscripción de eventos virtuales</a>
+                Para formar parte de la comunidad acceda al siguiente <a href="https://bayesplurinacional.org/link/UnirseALaComunidad.html" target="_blank">formulario.</a>
+                </h5>
+                </h6>
+
+                <br>
+
+
+            </div>
+
+            <div class="row center">
+                <h5 class="header col s12 light">Actividades Virtual Permanente.</h5>
+                <h6>
+                Para enviar una propuesta de actividad virtual acceda al siguiente <a href="https://bayesplurinacional.org/link/PropuestaVirtual.html" target="_blank">formulario</a>
                 </h5>
                 </h6>
 
