Seminar: Join the community

--- a/en/seminar.html
+++ b/en/seminar.html
@@ -149,7 +149,7 @@
             <ul>
               <li>&#x2022; <b>Video Conference Room</b>: <a href="https://bayesplurinacional.org/link/VideoConferencia.html" target="_blank">bayesplurinacional.org/link/VideoConferencia.html</a></li>
               <li>&#x2022; <b>Live Stream</b>: <a href="https://www.youtube.com/@bayesplurinacional" target="_blank">youtube.com/@bayesplurinacional</a></li>
-              <li>&#x2022; <b>Community Registration</b>: <a href="https://bayesplurinacional.org/link/InscripcionComunidad.html" target="_blank">bayesplurinacional.org/link/InscripcionComunidad.html</a></li>
+              <li>&#x2022; <b>Community Registration</b>: <a href="https://bayesplurinacional.org/link/JoinTheCommunity.html" target="_blank">https://bayesplurinacional.org/link/JoinTheCommunity.html</a></li>
             </ul>
 
             <div class="figcontainer" style="align-items: center;">
