--- a/link/PropuestasVirtuals.html
+++ b/link/PropuestasVirtuals.html
@@ -1,1 +1,2 @@
 <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1ztRiVSDwyfMjpUpIX5Nsv5g-kWWj_4LoLIbqZS3iHKc/prefill">
+<!--bayesplurinacional.org/link/PropuestasVirtuals.html-->
