--- a/link/JoinCommunity.html
+++ b/link/JoinCommunity.html
@@ -1,1 +1,2 @@
 <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1RcXrrb9Lu-V8vRPzomoXgfEW1XiTLuPCmbAmN_QGrvU/prefill">
+<!--bayesplurinacional.org/link/JoinCommunity.html-->
