--- a/link/PropostasVirtuals.html
+++ b/link/PropostasVirtuals.html
@@ -1,1 +1,2 @@
 <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/15piIoUYBx4KwI1XVLJsT7F7TZZjRLH0fRIHxHHF1tVM/prefill">
+<!--bayesplurinacional.org/link/PropostasVirtuals.html-->
