--- a/link/es/Comunidad.html
+++ b/link/es/Comunidad.html
@@ -1,1 +1,2 @@
 <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1OZ3f7jT62ck2x3dbRFuIg7wC6XKqWdcJQNa-uME2V0s/prefill">
+<!--bayesplurinacional.org/link/Comunidad.html-->
