--- a/en/index.html
+++ b/en/index.html
@@ -158,7 +158,7 @@
                <div class="row center">
                 <h5 class="header col s12 light">Join the community</h5>
                 <h6>
-                To join the community, please access the following <a href="https://bayesplurinacional.org/link/JoinTheCommunity.html" target="_blank"> form</a>
+                To join the community, please access the following <a href="https://bayesplurinacional.org/link/en/Community.html" target="_blank"> form</a>
                 </h5>
                 </h6>
 
@@ -167,7 +167,7 @@
                <div class="row center">
                 <h5 class="header col s12 light">Permanent Virtual Activities</h5>
                 <h6>
-                To submit a proposal for a virtual activity, please access the following <a href="https://bayesplurinacional.org/link/VirtualProposal.html" target="_blank"> form</a>
+                To submit a proposal for a virtual activity, please access the following <a href="https://bayesplurinacional.org/link/en/Virtual.html" target="_blank"> form</a>
                 </h5>
                 </h6>
 
