--- a/es/index.html
+++ b/es/index.html
@@ -203,7 +203,7 @@
             <div class="row center">
                 <h5 class="header col s12 light">Unirse a la comunidad</h5>
                 <h6>
-                Para formar parte de la comunidad acceda al siguiente <a href="https://bayesplurinacional.org/link/UnirseALaComunidad.html" target="_blank">formulario.</a>
+                Para formar parte de la comunidad acceda al siguiente <a href="https://bayesplurinacional.org/link/es/Comunidad.html" target="_blank">formulario.</a>
                 </h5>
                 </h6>
 
@@ -215,7 +215,7 @@
             <div class="row center">
                 <h5 class="header col s12 light">Actividades Virtual Permanente.</h5>
                 <h6>
-                Para enviar una propuesta de actividad virtual acceda al siguiente <a href="https://bayesplurinacional.org/link/PropuestaVirtual.html" target="_blank">formulario</a>
+                Para enviar una propuesta de actividad virtual acceda al siguiente <a href="https://bayesplurinacional.org/link/es/Virtual.html" target="_blank">formulario</a>
                 </h5>
                 </h6>
 
