--- a/es/seminario.html
+++ b/es/seminario.html
@@ -172,7 +172,7 @@
 
               <p>
                 El seminario virtual es una oportunidad para conversar una amplia gama de temas.
-                Nos enfocamos en los aspectos bayesianos de las aplicaciones prácticas, teóricas y filosóficas en todas las ramas de la ciencia y en todas las actividades productivas y sociales. Si quieres participar, envía tu propuesta a través del formulario <a href="https://bayesplurinacional.org/link/PropuestaVirtual.html">https://bayesplurinacional.org/link/PropuestaVirtual.html</a>.
+                Nos enfocamos en los aspectos bayesianos de las aplicaciones prácticas, teóricas y filosóficas en todas las ramas de la ciencia y en todas las actividades productivas y sociales. Si quieres participar, envía tu propuesta a través del formulario <a href="https://bayesplurinacional.org/link/es/Virtual.html">https://bayesplurinacional.org/link/es/Virtual.html</a>.
                 </p>
 
               <h5>Ciclo de Seminarios Virtuales</h5>
@@ -186,7 +186,7 @@
                </li>
                <li>&#x2022; <b>Transmisión en vivo</b>: <a href="https://www.youtube.com/@bayesplurinacional" target="_blank">youtube.com/@bayesplurinacional</a>
                </li>
-               <li>&#x2022; <b>Inscripción a la comunidad</b>: <a href="https://bayesplurinacional.org/link/InscripcionComunidad.html" target="_blank">bayesplurinacional.org/link/InscripcionComunidad.html</a>
+               <li>&#x2022; <b>Inscripción a la comunidad</b>: <a href="https://bayesplurinacional.org/link/es/Comunidad.html" target="_blank">bayesplurinacional.org/link/es/Comunidad.html</a>
                </li>
                </ul>
 
