Links como sharing (no prefill)

--- a/link/en/Community.html
+++ b/link/en/Community.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1RcXrrb9Lu-V8vRPzomoXgfEW1XiTLuPCmbAmN_QGrvU/prefill">
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSfRvfoVAb4uF23ZGx-5Q2Esne4NwswL7glV4bGFI9dUtlWfDg/viewform?usp=sharing">
 <!--https://bayesplurinacional.org/link/en/Community.html-->
