--- a/link/en/Virtual.html
+++ b/link/en/Virtual.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1hJmDA1L-AoFCncXL6XfeFxt0MkbDxFQes7XKxypsgS8/prefill">
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSddCQQpXeBkx1TJaNd0x37PvSa7lMKmVZTqhMODUqfXvotI6g/viewform?usp=sharing">
 <!--https://bayesplurinacional.org/link/en/Virtual.html-->
