--- a/link/es/Comunidad.html
+++ b/link/es/Comunidad.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1OZ3f7jT62ck2x3dbRFuIg7wC6XKqWdcJQNa-uME2V0s/prefill">
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSe0ueYaSwwE5kVS2ZFEH9FY2kG5Z5xTIlrsjwTL9TQDehj8jg/viewform?usp=sharing">
 <!--https://bayesplurinacional.org/link/es/Comunidad.html-->
