--- a/link/es/Virtual.html
+++ b/link/es/Virtual.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1ztRiVSDwyfMjpUpIX5Nsv5g-kWWj_4LoLIbqZS3iHKc/prefill">
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSfOD1csizJfGyob447DqvhDOsSsKChLNChxfmSds6-LGtyMjQ/viewform?usp=sharing">
 <!--https://bayesplurinacional.org/link/es/Virtual.html-->
