--- a/link/pt/Comunidade.html
+++ b/link/pt/Comunidade.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/1D64Yb5HjZiUyFO-ZbrqPL-FFgUxG0Q74jnSMmyPWD58/prefill">
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSevbPoXIJe0pIy5-bzCjwXOWaVtZC18GfKfl6TbYNp-0FMubg/viewform?usp=sharing">
 <!--https://bayesplurinacional.org/link/pt/Comunidade.html-->
