--- a/link/pt/Virtual.html
+++ b/link/pt/Virtual.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/15piIoUYBx4KwI1XVLJsT7F7TZZjRLH0fRIHxHHF1tVM/prefill">
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSe2CUr2aC1HqJ2odKC09ZsiqCpbGcRF7E3vcu2SUPSiArl6dw/viewform?usp=sharing">
 <!--https://bayesplurinacional.org/link/pt/Virtual.html-->
