--- a/en/city.html
+++ b/en/city.html
@@ -198,6 +198,9 @@
                 <h5 class="header col s12 light">
                     3. Hostel for students.
                 </h5>
+                <h6 class="header col s12 light">
+                    <b>To request a place, please fill in the form <a href="https://bayesplurinacional.org/link/es/HospedajeUNSa.html" target="_blank">https://bayesplurinacional.org/link/es/HospedajeUNSa.html</a></b>
+                </h6>
                 <p><b>Universidad Nacional de Salta</b>. Address: Av. Bolivia 5150, Salta. (<a href="https://deportes.unsa.edu.ar/index.php/albergue-universitario/" target="_blank">link to the UNSa web</a>)<br>
                 It has two rooms with 18 beds each (36 beds in total). You need to bring your own bedding (sheets).
                 </p>
@@ -212,6 +215,9 @@
                 <h5 class="header col s12 light">
                     4. Camping facilities.
                 </h5>
+                <h6 class="header col s12 light">
+                    <b>To request a place, please fill in the form <a href="https://bayesplurinacional.org/link/es/HospedajeUNSa.html" target="_blank">https://bayesplurinacional.org/link/es/HospedajeUNSa.html</a></b>
+                </h6>
                 <p><b>Universidad Nacional de Salta</b>. Address: Av. Bolivia 5150, Salta. (<a href="https://deportes.unsa.edu.ar/" target="_blank">link to the UNSa web</a>)<br>
                 The tents are set up under a roof and have good sanitary facilities.
                 </p>
