--- a/es/ciudad.html
+++ b/es/ciudad.html
@@ -235,6 +235,9 @@
                 <h5 class="header col s12 light">
                     3. Albergue para estudiantes.
                 </h5>
+                <h6 class="header col s12 light">
+                    <b>Para solicitar un lugar completar el formulario <a href="https://bayesplurinacional.org/link/es/HospedajeUNSa.html" target="_blank">https://bayesplurinacional.org/link/es/HospedajeUNSa.html</a></b>
+                </h6>
                 <p><b>Universidad Nacional de Salta</b>. Dirección: Av. Bolivia 5150, Salta. (<a href="https://deportes.unsa.edu.ar/index.php/albergue-universitario/" target="_blank">link a la página de la UNSa</a>)<br>
                 Cuenta con dos habitaciones con 18 camas cada una (36 camas total). Se requiere llevar juego de cama (sábanas).
                 </p>
@@ -249,6 +252,9 @@
                 <h5 class="header col s12 light">
                     4. Instalaciones para acampar.
                 </h5>
+                <h6 class="header col s12 light">
+                    <b>Para solicitar un lugar completar el formulario <a href="https://bayesplurinacional.org/link/es/HospedajeUNSa.html" target="_blank">https://bayesplurinacional.org/link/es/HospedajeUNSa.html</a></b>
+                </h6>
                 <p><b>Universidad Nacional de Salta</b>. Dirección: Av. Bolivia 5150, Salta. (<a href="https://deportes.unsa.edu.ar/" target="_blank">link a la página de la UNSa</a>)<br>
                 Las carpas se instalan bajo techo y cuenta con buenas instalaciones sanitarias.
                 </p>
