Recursos y materiales, en semianrio

--- a/es/seminario.html
+++ b/es/seminario.html
@@ -184,9 +184,12 @@
               <ul>
                 <li>&#x2022; <b>Sala de video conferencia</b>: <a href="https://bayesplurinacional.org/link/VideoConferencia.html" target="_blank">bayesplurinacional.org/link/VideoConferencia.html</a>
                </li>
+               https://bayesplurinacional.org/link/Bayes2024.html
                <li>&#x2022; <b>Transmisión en vivo</b>: <a href="https://www.youtube.com/@bayesplurinacional" target="_blank">youtube.com/@bayesplurinacional</a>
                </li>
                <li>&#x2022; <b>Inscripción a la comunidad</b>: <a href="https://bayesplurinacional.org/link/es/Comunidad.html" target="_blank">bayesplurinacional.org/link/es/Comunidad.html</a>
+               </li>
+               <li>&#x2022; <b>Recursos y materiales 2024</b>: <a href="https://bayesplurinacional.org/link/Bayes2024.html" target="_blank">bayesplurinacional.org/link/Bayes2024.html</a>
                </li>
                </ul>
 
