--- a/en/seminar.html
+++ b/en/seminar.html
@@ -150,7 +150,9 @@
               <li>&#x2022; <b>Video Conference Room</b>: <a href="https://bayesplurinacional.org/link/VideoConferencia.html" target="_blank">bayesplurinacional.org/link/VideoConferencia.html</a></li>
               <li>&#x2022; <b>Live Stream</b>: <a href="https://www.youtube.com/@bayesplurinacional" target="_blank">youtube.com/@bayesplurinacional</a></li>
               <li>&#x2022; <b>Community Registration</b>: <a href="https://bayesplurinacional.org/link/en/Community.html" target="_blank">https://bayesplurinacional.org/link/en/Community.html</a></li>
-            </ul>
+             <li>&#x2022; <b>Resources and materials</b>: <a href="https://bayesplurinacional.org/link/Bayes2024.html" target="_blank">bayesplurinacional.org/link/Bayes2024.html</a>
+               </li>
+              </ul>
 
             <div class="figcontainer" style="align-items: center;">
               <div class="figure" style="flex: 0.6">
